# saigo-release-scripts

./: CMakeLists.txt  README.md  saigolibs-tarballs.cmake  tarballs.cmake
cmake/: SaigoHelpers.cmake  SaigoSetup.cmake
cmake/Yokai/: Architecture.cmake
patches/binutils/: 0002-config-sub-enable-riscv64-and-loong64.patch  0003-libiberty-waitpid-c-only-compile-waitpid-when-have-waitpid.patch  0004-ld-makefile-in-do-not-build-libldtestplug-la-testplug-lo.patch
patches/llvm-project/: 0001-cmake-accept-llvm-enable-lto-auto-option.patch
patches/nacl-gdb/: 0001-gdb-amd64-linux-nat-c-fix-ps-get-thread-area-signature.patch  0002-gdb-gdbserver-proc-service-c-fix-ps-lgetfpregs-signature.patch  0003-gdb-gdbserver-linux-x86-low-c-fix-ps-get-thread-area-signature.patch  0004-gdb-gdbserver-proc-service-c-fix-ps-lsetfpregs-signature.patch  0005-readline-input-c-include-conio-h-on-mingw.patch  0006-readline-rltty-c-include-sys-ioctl-h-on-macos.patch  0007-readline-terminal-c-include-sys-ioctl-h-on-macos.patch
tools/prepare/: saigolibs-tarballs  tarballs  tarballs.py
tools/release/: build  clean  configure  freemem  nproc  package
tools/release/conf/: freebsd-i686.conf  linux-loong64.conf  linux-ppc64el.conf  linux-riscv64.conf
